--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="descripci_n">DESCRIPCIÓN</string>
     <string name="causa_probable">CAUSA PROBABLE</string>
     <string name="_0">0</string>
+    <string name="c_digo">CÓDIGO</string>
 </resources>
