--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="invalid_username">Correo inválido</string>
     <string name="invalid_password">Contraseña debe tener más de 5 carácteres</string>
     <string name="login_failed">"INICIO FALLIDO"</string>
+    <!-- Strings related to app fields -->
     <string name="nombre_contratista">Nombre contratista</string>
     <string name="c_digo_contrato">Código contrato</string>
     <string name="c_digo_api">Código API</string>
@@ -49,7 +50,6 @@
     <string name="ubicaci_n">UBICACIÓN</string>
     <string name="especialidad">ESPECIALIDAD</string>
     <string name="b_squeda_de_tareas">BÚSQUEDA DE TAREAS</string>
-    <string name="interrupci_n">INTERRUPCIÓN</string>
     <string name="detalle_de_tarea">DETALLE DE TAREA</string>
     <string name="interrupciones">INTERRUPCIONES</string>
     <string name="informaci_n_de_la_ltima_gesti_n_de_la_interrupcion">INFORMACIÓN DE LA ÚLTIMA GESTIÓN DE LA INTERRUPCION</string>
@@ -68,4 +68,9 @@
     <string name="causa_probable">CAUSA PROBABLE</string>
     <string name="_0">0</string>
     <string name="c_digo">CÓDIGO</string>
+    <string name="ito">ITO</string>
+    <string name="hora_programada_inicio">HORA PROGRAMADA INICIO</string>
+    <string name="hora_programada_fin">HORA PROGRAMADA FIN</string>
+    <string name="iniciar">INICIAR</string>
+    <string name="interrupci_n">INTERRUPCIÓN</string>
 </resources>
