--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="nombre_de_contrato">NOMBRE DE CONTRATO</string>
     <string name="operadores_autorizados">Operadores Autorizados</string>
     <string name="progreso">Progreso</string>
+    <string name="rea_contrato">ÁREA CONTRATO</string>
 </resources>
